fixed shift selection

--- a/client/stylesheets/common/utils.scss
+++ b/client/stylesheets/common/utils.scss
@@ -27,3 +27,9 @@
   width: 100%;
   border-bottom: 1px $border-default solid;
 }
+
+.global-prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
